# autonomous_coding_agent

./: .brooks-lint.yaml  .coderabbit.yaml  .gitignore  AGENTS.md  AGENTS.project.md  AUDIT-2026-04-14.md  CHANGELOG.md  CLAUDE.md  COHERENCE.md  CONTINUITY.md  FINAL-ARCHITECTURE-DECISION.md  GUIDE.md  IMPLEMENTATION-PLAN.md  LINEAR-BOOTSTRAP.md  LINEAR.md  LOGIC.md  PROJECT_INTENT.md  PROMPTS.md  QUEUE-RUNS.md  README.md  REPO_MAP.md  RULES.md  SCOPING-three-pillar-principles.md  STRUCTURE.md  WORK-LOG.md  agent-delegation-architecture-v2.md  autonomous-agent-system-architecture-review.md  canonical-architecture-synthesis.md  canonical-architecture.md  codex-audit-and-reconciliation.md  codex-repair-prompt.md  feedback-reconciliation-2026-04-14.md  pyproject.toml  three-way-reconciliation-final.md  todo.md
.codex-agent/: active-context.md  approval-snapshot.json  beginner-guide.md  context-bundle.md  data-model.md  design-direction.md  design-system.json  discovery-questionnaire.md  env-secrets-checklist.md  execution-log.md  final-handoff.md  implementation-plan.md  phase-card.md  plan-variants.md  product-context.md  product-intelligence.md  progress.md  project-brief.md  scorecard.md  state.json  tech-context.md  ultra-context.md  verification-report.md
.github/: CODEOWNERS
design-history/: ADR-0001-terminal-state-normalization.md  ADR-0002-audit-tiebreaker-protocol.md  ADR-0003-phase-1-architecture-checkpoint.md  ADR-0004-chatgpt-pro-strategic-audit-cadence.md  ADR-0005-codex-conversation-lifecycle.md  ADR-0006-linear-authority-boundary.md  AUDIT-2026-04-14.md  (+12 more)
(+97 files in other folders)
